[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aqhso"
version = "1.0.1"
description = "Adaptive Quantum Hybrid Swarm Optimizer: A Three-Phase Metaheuristic"
readme = "README.md"
authors = [
    { name = "Puneeth Reddy T" },
    { name = "Katyayni Aarya" },
]
license = { text = "MIT License" }
requires-python = ">=3.8"
dependencies = [
    "mealpy>=3.0.1",
    "numpy>=1.26.4",
    "scipy>=1.11.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
"Homepage" = "https://github.com/Puneethreddy2530/Research_Paper"
"Bug Tracker" = "https://github.com/Puneethreddy2530/Research_Paper/issues"
